# whisper-overlay

./: Cargo.toml  LICENSE
src/: audio.rs  cli.rs  main.rs  whisper.rs
