[package]
name = "whisper-overlay"
version = "1.0.0"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>"]
description = "A wayland overlay providing speech-to-text functionality for any application via a global push-to-talk hotkey"
homepage = "https://github.com/oddlama/whisper-overlay"
repository = "https://github.com/oddlama/embedded-devices"
keywords = ["whisper", "speech-to-text", "stt", "faster-whisper", "wayland"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.7", features = ["derive"] }
cpal = "0.15.3"
ct2rs = { version = "0.9.5", features = ["whisper"] }
ctrlc = "3.4.5"
enigo = { version = "0.2.1", features = ["wayland"], default-features = false }
env_logger = "0.11.5"
futures-util = "0.3.30"
hound = "3.5.1"
mel_spec = "0.2.7"
tempfile = "3.14.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-util", "sync", "time", "macros", "full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
